--- a/support/release-notes/0.1033.0.md
+++ b/support/release-notes/0.1033.0.md
@@ -1,43 +1,33 @@
 ## Key Features
 
+- Updated `interactionId` to be used as the unzip folder name and enhanced logging during CSV ZIP file extraction.  
+  ([#2736](https://github.com/tech-by-design/polyglot-prime/issues/2736))
+
 - Implemented memory optimizations and enhanced CSV header extraction and validation logic.  
-  [#2725](https://github.com/tech-by-design/polyglot-prime/issues/2725)
+  ([#2725](https://github.com/tech-by-design/polyglot-prime/issues/2725))
 
-- Enhanced validation for `PART_2_FLAG` fields and improved error messaging in the `validate_package` function.  
-  [#2725](https://github.com/tech-by-design/polyglot-prime/issues/2725)
-
+- Added part2 data flagging for CCDA and HL7 FHIR Bundles.  
+  ([#2182](https://github.com/tech-by-design/polyglot-prime/issues/2182))
 
 ## Enhancements & Fixes
 
-- Increased HTTP header size limit and consolidated request headers into a single CloudWatch log entry.  
-  [#2714](https://github.com/tech-by-design/polyglot-prime/issues/2714)
+- Updated Mirth Connect channel file and XSLT file to remove mandatory checking for the consent LOINC code and add mandatory checking for Organization Name.  
+  ([#2739](https://github.com/tech-by-design/polyglot-prime/issues/2739))
 
-- Wrapped HTTP response early to enforce ACK `Content-Type` header validation.  
-  [#2686](https://github.com/tech-by-design/polyglot-prime/issues/2686)
+- Updated the address `use` value from `PST` in AthenaHealth CCDA files to resolve FHIR validation errors.  
+  ([#2756](https://github.com/tech-by-design/polyglot-prime/issues/2756))
 
-- Updated ZIP upload file extension validation message for improved clarity.  
-  [#2380](https://github.com/tech-by-design/polyglot-prime/issues/2380)
+- Resolved issues with race and ethnicity `valueString` handling in HL7 files.  
+  ([#2739](https://github.com/tech-by-design/polyglot-prime/issues/2739))
 
-- Refactored database code to support Nexus and Synthetic updates.  
-  [#2693](https://github.com/tech-by-design/polyglot-prime/issues/2693)
+- Refactored database code to support Nexus updates.  
+  ([#2693](https://github.com/tech-by-design/polyglot-prime/issues/2693))
 
-- Included all missing table constraints and indexes in the `pgTap` function.  
-  [#2693](https://github.com/tech-by-design/polyglot-prime/issues/2693)
+- Added new columns to the `pgTapResults` table and updated test failure result handling.  
+  ([#2693](https://github.com/tech-by-design/polyglot-prime/issues/2693))
 
-- Updated XSLT files to improve whitespace handling and prevent validation warnings during HL7-to-FHIR conversion.  
-  [#2739](https://github.com/tech-by-design/polyglot-prime/issues/2739)
+- Updated pgTap function to remove database run errors.  
+  ([#2693](https://github.com/tech-by-design/polyglot-prime/issues/2693))
 
-- Added ETH security label to `Bundle.meta` for 42 CFR Part 2 submissions.  
-  [#2571](https://github.com/tech-by-design/polyglot-prime/issues/2571)
-
-- Destroyed Python process after validation to prevent memory leaks.  
-  [#2725](https://github.com/tech-by-design/polyglot-prime/issues/2725)
-
-- Implemented memory optimizations and enhanced CSV header extraction and validation logic.  
-  [#2725](https://github.com/tech-by-design/polyglot-prime/issues/2725)
-
-- Removed leading and trailing spaces in address fields instead of using the `normalize-space()` function in HL7 XSLT processing.  
-  [#2739](https://github.com/tech-by-design/polyglot-prime/issues/2739)
-
-- Updated Mirth Connect channel configuration to resolve issues with saving input CCDA XML files.  
-  [#2756](https://github.com/tech-by-design/polyglot-prime/issues/2756)
+- Updated announcement page URLs and added the announcement URL to `env.sample`.  
+  ([#2559](https://github.com/tech-by-design/polyglot-prime/issues/2559))
